updated the contents of recent cyber attack folder
photos nalang po kulang niyan tiyaka nde pa responsive

--- a/recent-cyber-attacks/boeing-ransomware.html
+++ b/recent-cyber-attacks/boeing-ransomware.html
@@ -301,8 +301,8 @@
             <div class="flex items-center text-white p-4 rounded-lg w-fit">
                 <img src="/assets/africa.jpg" alt="Author" class="w-12 h-12 rounded-full object-cover mr-4">
                 <div>
-                    <p class="font-semibold text-base">John Doe</p>
-                    <p class="text-sm text-gray-300">March 14, 2025</p>
+                    <p class="font-semibold text-base">Patrick Christopher Moya</p>
+                    <p class="text-sm text-gray-300">April 02, 2025</p>
                 </div>
             </div>
 
@@ -326,7 +326,7 @@
             </div>
     
             <div class="flex justify-center">
-                <iframe width="1200" height="600" src="https://www.youtube.com/embed/V7VuC0wGCg4?si=iGrPqLf5r2a_lsyC"
+                <iframe width="1200" height="600" src="https://www.youtube.com/embed/5cvLo699Zow?si=YyLezgedU_vZAFox"
                   title="YouTube video player" frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
@@ -350,33 +350,33 @@
           <h4 class="font-medium text-2xl text-[#E2C8F1]">Read More</h4>
           <div class="grid grid-cols-3 gap-4">
             
-            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:scale-105 transform transition-all duration-300 hover:scale-105">
                 <img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded p-4" alt="">
                 <div class="p-4">
-                    <h5 class=" font-medium text-2xl">AI in hacking</h5>
-                    <p class="my-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, officia facere at laudantium quas iure facilis modi sunt porro fugiat, molestias saepe id ab atque sapiente rem dolorem beatae. Reprehenderit.</p>
+                    <h5 class=" font-medium text-2xl">ICBC Financial Services Ransomware Attack</h5>
+                    <p class="my-2">Get ready for a financial thriller with global implications! ICBC, a banking behemoth, found itself caught in a digital double whammy. First, a LockBit ransomware attack threw a wrench in US Treasury trades, causing ripples in the massive financial markets. Then, just when things seemed to settle, a data breach hit their London branch! This isn't just about one bank's troubles; it's a nail-biting illustration of how interconnected our financial world is and the potential for cyberattacks to send shockwaves across continents.</p>
                     <div class="text-right">
                         <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
                     </div>
                 </div>
             </div>
 
-            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:scale-105 transform transition-all duration-300 hover:scale-105">
                 <img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded p-4" alt="">
                 <div class="p-4">
-                    <h5 class=" font-medium text-2xl">AI in hacking</h5>
-                    <p class="my-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, officia facere at laudantium quas iure facilis modi sunt porro fugiat, molestias saepe id ab atque sapiente rem dolorem beatae. Reprehenderit.</p>
+                    <h5 class=" font-medium text-2xl">Schneider Electric Ransomware Attack</h5>
+                    <p class="my-2">Let's journey into the intricate world of industrial giants and the cyber threats they face. Schneider Electric, a powerhouse in automation and digital transformation, found itself in a digital tug-of-war with the Hellcat ransomware group. Picture a locked digital vault containing project secrets and user data, with a hefty ransom demand echoing in the digital corridors. While the core operations remained seemingly untouched, the potential exposure of sensitive information adds a layer of suspense to this industrial cyber drama. It's a stark reminder that even the most robust enterprises are not immune to the persistent claws of ransomware.</p>
                     <div class="text-right">
                         <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
                     </div>
                 </div>
             </div>
 
-            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:scale-105 transform transition-all duration-300 hover:scale-105">
                 <img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded p-4" alt="">
                 <div class="p-4">
-                    <h5 class=" font-medium text-2xl">AI in hacking</h5>
-                    <p class="my-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, officia facere at laudantium quas iure facilis modi sunt porro fugiat, molestias saepe id ab atque sapiente rem dolorem beatae. Reprehenderit.</p>
+                    <h5 class=" font-medium text-2xl">Kawasaki Motors Europe Ransomware Attack</h5>
+                    <p class="my-2">A stealthy digital heist targeting the roaring world of Kawasaki motorcycles! RansomHub, a shadowy group of cyber extortionists, allegedly snatched a treasure trove of data from Kawasaki Motors Europe. What makes this tale extra intriguing is the initial hush-hush, with Kawasaki seemingly downplaying the digital drama. But like any good thriller, a plot twist emerged when the stolen secrets were reportedly leaked online after the ransom remained unpaid. It's a fascinating peek behind the corporate curtain, revealing that even when the engine's running smoothly, digital dangers can still lurk in the shadows.</p>
                     <div class="text-right">
                         <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
                     </div>
