--- a/recent-cyber-attacks/truepill-data-breach.html
+++ b/recent-cyber-attacks/truepill-data-breach.html
@@ -301,15 +301,15 @@
             <div class="flex items-center text-white p-4 rounded-lg w-fit">
                 <img src="/assets/africa.jpg" alt="Author" class="w-12 h-12 rounded-full object-cover mr-4">
                 <div>
-                    <p class="font-semibold text-base">John Doe</p>
-                    <p class="text-sm text-gray-300">March 14, 2025</p>
+                    <p class="font-semibold text-base">John Louie Cuenco</p>
+                    <p class="text-sm text-gray-300">April 11, 2025</p>
                 </div>
             </div>
 
             <div class="mb-8">
                 <p class="leading-relaxed">
-                  <span class="text-2xl font-serif float-left ">S</span>
-                  A significant class-action lawsuit brought serious allegations against Oracle, a prominent data broker, accusing the company of engaging in clandestine surveillance of individuals' online and offline activities. The lawsuit contended that Oracle compiled intricate profiles on individuals, encompassing sensitive details such as their location data, financial status, and health information. Furthermore, it was alleged that this wealth of personal data was then sold to third-party entities without the knowledge or explicit consent of the individuals being tracked. A key aspect of the lawsuit highlighted Oracle's purported use of "coretag" tracking technology across numerous websites. This tracking allegedly enabled Oracle to intercept communications and gather data from individuals with whom the company had no direct relationship or interaction.
+                  <span class="text-2xl font-serif float-left ">A</span>
+                   significant class-action lawsuit brought serious allegations against Oracle, a prominent data broker, accusing the company of engaging in clandestine surveillance of individuals' online and offline activities. The lawsuit contended that Oracle compiled intricate profiles on individuals, encompassing sensitive details such as their location data, financial status, and health information. Furthermore, it was alleged that this wealth of personal data was then sold to third-party entities without the knowledge or explicit consent of the individuals being tracked. A key aspect of the lawsuit highlighted Oracle's purported use of "coretag" tracking technology across numerous websites. This tracking allegedly enabled Oracle to intercept communications and gather data from individuals with whom the company had no direct relationship or interaction.
 
                 </p>
                 <p class="mt-4 leading-relaxed">
@@ -318,7 +318,7 @@
             </div>
     
             <div class="flex justify-center">
-                <iframe width="1200" height="600" src="https://www.youtube.com/embed/V7VuC0wGCg4?si=iGrPqLf5r2a_lsyC"
+                <iframe width="1200" height="600" src="https://www.youtube.com/embed/fCFHyQag21Q?si=aLXclocj88rlcIFV"
                   title="YouTube video player" frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
@@ -342,33 +342,33 @@
           <h4 class="font-medium text-2xl text-[#E2C8F1]">Read More</h4>
           <div class="grid grid-cols-3 gap-4">
             
-            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:scale-105 transform transition-all duration-300 hover:scale-105">
                 <img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded p-4" alt="">
                 <div class="p-4">
-                    <h5 class=" font-medium text-2xl">AI in hacking</h5>
-                    <p class="my-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, officia facere at laudantium quas iure facilis modi sunt porro fugiat, molestias saepe id ab atque sapiente rem dolorem beatae. Reprehenderit.</p>
+                    <h5 class=" font-medium text-2xl">LoanDepot Ransomware Attack</h5>
+                    <p class="my-2">In early January 2024, LoanDepot, a prominent mortgage lending company, became the target of a significant ransomware attack. The ALPHV/BlackCat ransomware group claimed responsibility for the intrusion, successfully breaching LoanDepot's systems. This cyberattack led to the exfiltration of sensitive personal information belonging to a staggering 16.6 million of their customers. The compromised data included a range of highly confidential details, such as names, Social Security numbers, dates of birth, and financial account numbers, placing a vast number of individuals at considerable risk of identity theft and financial fraud.</p>
                     <div class="text-right">
                         <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
                     </div>
                 </div>
             </div>
 
-            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:scale-105 transform transition-all duration-300 hover:scale-105">
                 <img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded p-4" alt="">
                 <div class="p-4">
-                    <h5 class=" font-medium text-2xl">AI in hacking</h5>
-                    <p class="my-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, officia facere at laudantium quas iure facilis modi sunt porro fugiat, molestias saepe id ab atque sapiente rem dolorem beatae. Reprehenderit.</p>
+                    <h5 class=" font-medium text-2xl">MGM Resorts Phishing Attack</h5>
+                    <p class="my-2">Welcome to the dazzling world of Las Vegas, where the stakes are always high, even in the digital realm! MGM Resorts, a titan of the Strip, found its glittering operations plunged into chaos by a cunning cyberattack, reportedly orchestrated by the Scattered Spider gang. Imagine slot machines going silent and reservation systems grinding to a halt – a digital blackout in the city that never sleeps! The subsequent legal fallout over compromised data adds another layer to this Sin City cyber saga, highlighting the very real consequences of digital vulnerabilities in the entertainment industry.</p>
                     <div class="text-right">
                         <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
                     </div>
                 </div>
             </div>
 
-            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:scale-105 transform transition-all duration-300 hover:scale-105">
                 <img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded p-4" alt="">
                 <div class="p-4">
-                    <h5 class=" font-medium text-2xl">AI in hacking</h5>
-                    <p class="my-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, officia facere at laudantium quas iure facilis modi sunt porro fugiat, molestias saepe id ab atque sapiente rem dolorem beatae. Reprehenderit.</p>
+                    <h5 class=" font-medium text-2xl">Kawasaki Motors Europe Cyber Attack</h5>
+                    <p class="my-2">A stealthy digital heist targeting the roaring world of Kawasaki motorcycles! RansomHub, a shadowy group of cyber extortionists, allegedly snatched a treasure trove of data from Kawasaki Motors Europe. What makes this tale extra intriguing is the initial hush-hush, with Kawasaki seemingly downplaying the digital drama. But like any good thriller, a plot twist emerged when the stolen secrets were reportedly leaked online after the ransom remained unpaid. It's a fascinating peek behind the corporate curtain, revealing that even when the engine's running smoothly, digital dangers can still lurk in the shadows.</p>
                     <div class="text-right">
                         <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
                     </div>
