--- a/recent-cyber-attacks/crowdstrike-incident.html
+++ b/recent-cyber-attacks/crowdstrike-incident.html
@@ -301,8 +301,8 @@
             <div class="flex items-center text-white p-4 rounded-lg w-fit">
                 <img src="/assets/africa.jpg" alt="Author" class="w-12 h-12 rounded-full object-cover mr-4">
                 <div>
-                    <p class="font-semibold text-base">John Doe</p>
-                    <p class="text-sm text-gray-300">March 14, 2025</p>
+                    <p class="font-semibold text-base">Thaddeus Toledo</p>
+                    <p class="text-sm text-gray-300">April 03, 2025</p>
                 </div>
             </div>
 
@@ -327,7 +327,7 @@
             </div>
     
             <div class="flex justify-center">
-                <iframe width="1200" height="600" src="https://www.youtube.com/embed/V7VuC0wGCg4?si=iGrPqLf5r2a_lsyC"
+                <iframe width="1200" height="600" src="https://www.youtube.com/embed/EihkeIVgq_0?si=FIO-DE7zPG9TK0RF"
                   title="YouTube video player" frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
@@ -351,33 +351,33 @@
           <h4 class="font-medium text-2xl text-[#E2C8F1]">Read More</h4>
           <div class="grid grid-cols-3 gap-4">
             
-            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:scale-105 transform transition-all duration-300 hover:scale-105">
                 <img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded p-4" alt="">
                 <div class="p-4">
-                    <h5 class=" font-medium text-2xl">AI in hacking</h5>
-                    <p class="my-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, officia facere at laudantium quas iure facilis modi sunt porro fugiat, molestias saepe id ab atque sapiente rem dolorem beatae. Reprehenderit.</p>
+                    <h5 class=" font-medium text-2xl">Change Healthcare Ransomware Attack </h5>
+                    <p class="my-2"> The ransomware attack caused a "widespread outage, crippling essential functions such as insurance eligibility verification, claims processing, and prescription fulfillment." This directly led to a major IT outage across the healthcare system.</p>
                     <div class="text-right">
                         <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
                     </div>
                 </div>
             </div>
 
-            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:scale-105 transform transition-all duration-300 hover:scale-105">
                 <img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded p-4" alt="">
                 <div class="p-4">
-                    <h5 class=" font-medium text-2xl">AI in hacking</h5>
-                    <p class="my-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, officia facere at laudantium quas iure facilis modi sunt porro fugiat, molestias saepe id ab atque sapiente rem dolorem beatae. Reprehenderit.</p>
+                    <h5 class=" font-medium text-2xl">ICBC Financial Services Ransomware Attack</h5>
+                    <p class="my-2">This attack "led to a halt in U.S. Treasury trades and causing considerable payment delays," indicating a significant disruption of their IT systems and operations.</p>
                     <div class="text-right">
                         <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
                     </div>
                 </div>
             </div>
 
-            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:scale-105 transform transition-all duration-300 hover:scale-105">
                 <img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded p-4" alt="">
                 <div class="p-4">
-                    <h5 class=" font-medium text-2xl">AI in hacking</h5>
-                    <p class="my-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, officia facere at laudantium quas iure facilis modi sunt porro fugiat, molestias saepe id ab atque sapiente rem dolorem beatae. Reprehenderit.</p>
+                    <h5 class=" font-medium text-2xl">MGM Resorts Phishing Attack</h5>
+                    <p class="my-2">The attack "brought operations across their prominent Las Vegas properties to a near standstill for almost a week," affecting various IT-dependent services like slot machines, hotel bookings, and point-of-sale systems. This was a major IT outage impacting their business.</p>
                     <div class="text-right">
                         <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
                     </div>
