--- a/recent-cyber-attacks/mgm-resorts.html
+++ b/recent-cyber-attacks/mgm-resorts.html
@@ -301,8 +301,8 @@
             <div class="flex items-center text-white p-4 rounded-lg w-fit">
                 <img src="/assets/africa.jpg" alt="Author" class="w-12 h-12 rounded-full object-cover mr-4">
                 <div>
-                    <p class="font-semibold text-base">John Doe</p>
-                    <p class="text-sm text-gray-300">March 14, 2025</p>
+                    <p class="font-semibold text-base">Latisha Marciano</p>
+                    <p class="text-sm text-gray-300">April 08, 2025</p>
                 </div>
             </div>
 
@@ -328,7 +328,7 @@
             </div>
     
             <div class="flex justify-center">
-                <iframe width="1200" height="600" src="https://www.youtube.com/embed/V7VuC0wGCg4?si=iGrPqLf5r2a_lsyC"
+                <iframe width="1200" height="600" src="https://www.youtube.com/embed/rwgy0oYIpFM?si=JiN5ZQbb5_K5SrZb"
                   title="YouTube video player" frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
@@ -352,33 +352,33 @@
           <h4 class="font-medium text-2xl text-[#E2C8F1]">Read More</h4>
           <div class="grid grid-cols-3 gap-4">
             
-            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:scale-105 transform transition-all duration-300 hover:scale-105">
                 <img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded p-4" alt="">
                 <div class="p-4">
-                    <h5 class=" font-medium text-2xl">AI in hacking</h5>
-                    <p class="my-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, officia facere at laudantium quas iure facilis modi sunt porro fugiat, molestias saepe id ab atque sapiente rem dolorem beatae. Reprehenderit.</p>
+                    <h5 class=" font-medium text-2xl">Change Healthcare Ransomware Attack </h5>
+                    <p class="my-2">In a dramatic cyber showdown, Change Healthcare, a vital cog in the US medical machine, found itself in the crosshairs of the notorious BlackCat ransomware gang. Imagine pharmacies unable to fill prescriptions and hospitals facing payment pandemonium – it was a real-life digital emergency! Ultimately, the alleged hefty ransom paid paints a vivid picture of the immense pressure these attacks can inflict, leaving us pondering the true cost of keeping our vital systems safe. Get ready to explore the gripping saga of a healthcare giant brought to its knees by the invisible menace of ransomware.</p>
                     <div class="text-right">
                         <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
                     </div>
                 </div>
             </div>
 
-            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:scale-105 transform transition-all duration-300 hover:scale-105">
                 <img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded p-4" alt="">
                 <div class="p-4">
-                    <h5 class=" font-medium text-2xl">AI in hacking</h5>
-                    <p class="my-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, officia facere at laudantium quas iure facilis modi sunt porro fugiat, molestias saepe id ab atque sapiente rem dolorem beatae. Reprehenderit.</p>
+                    <h5 class=" font-medium text-2xl">ICBC Financial Services Ransomware Attack</h5>
+                    <p class="my-2">ICBC, a banking behemoth, found itself caught in a digital double whammy. First, a LockBit ransomware attack threw a wrench in US Treasury trades, causing ripples in the massive financial markets. Then, just when things seemed to settle, a data breach hit their London branch! This isn't just about one bank's troubles; it's a nail-biting illustration of how interconnected our financial world is and the potential for cyberattacks to send shockwaves across continents.</p>
                     <div class="text-right">
                         <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
                     </div>
                 </div>
             </div>
 
-            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+            <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:scale-105 transform transition-all duration-300 hover:scale-105">
                 <img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded p-4" alt="">
                 <div class="p-4">
-                    <h5 class=" font-medium text-2xl">AI in hacking</h5>
-                    <p class="my-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, officia facere at laudantium quas iure facilis modi sunt porro fugiat, molestias saepe id ab atque sapiente rem dolorem beatae. Reprehenderit.</p>
+                    <h5 class=" font-medium text-2xl">Boeing ransomware attack</h5>
+                    <p class="my-2">Fasten your seatbelts for a high-flying cyber tale targeting the giants of the aerospace industry! Boeing, the name synonymous with aviation innovation, found itself in the crosshairs of the notorious LockBit ransomware group. Picture this: a $200 million ransom demand hanging in the digital air! Even though some data took an unauthorized flight online, Boeing assured the world that flight safety remained grounded in security. It's a stark reminder that even the most technologically advanced companies face relentless cyber threats, and the stakes are sky-high when it comes to protecting critical infrastructure.</p>
                     <div class="text-right">
                         <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
                     </div>
