--- a/recent-cyber-attacks/boeing-ransomware.html
+++ b/recent-cyber-attacks/boeing-ransomware.html
@@ -9,7 +9,10 @@
 	</head>
 	<body class="text-white text-roboto">
 		<!-- NAVIGATION -->
-		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/picture-recent-cyber-attacks/boeing.jpeg')] bg-cover bg-center bg-no-repeat relative">
+		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/picture-recent-cyber-attacks/boeing.jpg')] bg-cover bg-center bg-no-repeat relative"
+             style="position: relative;">
+            <div style="position: absolute; inset: 0; background-color: rgba(0, 0, 0, 0.8); pointer-events: none;"></div>
+            <div style="position: absolute; inset: 0; box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.5); pointer-events: none;"></div>
             <nav class="absolute inset-0 z-10">
                 <div class="w-full p-4 flex items-center justify-between">
                     <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
